--- a/assets/sass/pages/_identity.scss
+++ b/assets/sass/pages/_identity.scss
@@ -27,7 +27,7 @@
         z-index: 1;
     }
     .tile__wrapper {
-        filter: drop-shadow(0 5px 8px rgb(0, 0, 0, 0.4));
+        //filter: drop-shadow(0 5px 8px rgb(0, 0, 0, 0.4));
     }
     .tile__left {
         background-image: radial-gradient(circle at 101.4% 0px, rgba(0, 0, 0, 0) 0, rgb(222,184,135, 0) 105px, white 105px);
